# consus

./: .clang-format  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.txt  prepare.sh  set_git_vers.sh
exe/: CMakeLists.txt
exe/WHAM/: CMakeLists.txt
exe/WHAM/NVT/: CMakeLists.txt  makeDOS.cpp  makeDOSJK.cpp  makeHist.cpp  makeMicroMeans.cpp  refineDOS.cpp  refineDOSJK.cpp  reweight.cpp  reweight_dT.cpp  searchMinMax.cpp
exe/WHAM2D/: .CMakeLists.txt.swp  .makeDOSandMicroMean.cpp.swp  CMakeLists.txt  logWeights.cpp  makeDOS.cpp  makeDOSJK.cpp  makeDOSandMicroMean.cpp  makeMicroMeans.cpp  reweight_constK.cpp  reweight_contour.cpp  reweightdT_constK.cpp  reweightdT_contour.cpp  searchMinMax.cpp
exe/WHAM2D/NVT/: CMakeLists.txt  InverseBetaMicro.cpp  canonical.cpp  canonical_constK.cpp  canonical_dT.cpp  logWeightOfE.cpp  makeDOS.cpp  makeDOSJK.cpp  makeDOSJK_broydn2.cpp  makeDOS_broydn2.cpp  makeDOS_new.cpp  makeHists.cpp  makeMicroMeans.cpp  makeOverlap.cpp  refineDOS.cpp  refineDOSJK.cpp  refineDOSJK_broydn2.cpp  refineDOS_broydn2.cpp  reweightE.cpp  reweight_constK.cpp  reweight_constT.cpp  reweight_contour.cpp  reweight_hist.cpp  reweight_hist2d.cpp  reweight_prob.cpp  reweightdT2_constK.cpp  reweightdT2_contour.cpp  reweightdT_constK.cpp  reweightdT_constT.cpp  reweightdT_contour.cpp  searchMinMax.cpp
git-hooks/: post-commit
src/: DiscreteAxis.hpp  DiscreteAxis2D.hpp  Range.hpp  addlogwise.hpp  consus_version.hpp  definitions.hpp  load_file.hpp  optimization.hpp  simple.hpp
src/WHAM/: Ensemble.hpp  WHAM.hpp  reweight.hpp
src/WHAM2D/: .WHAM2d.hpp.swp  Ensemble.hpp  HistInfo.hpp  HistInfo2D.hpp  WHAM1D.hpp  WHAM2D.hpp  WHAM2d.hpp  reweight.hpp
src/data/: all_matching.hpp  load_file.hpp
src/eigenvalues/: .add_eigenvalues.hpp.swp  add_eigenvalues.hpp
src/search/: find_zero_brent.hpp  where_diff.hpp
src/vector/: helper.hpp
