include_directories(.)

macro(compile name)
  add_executable(NVT2D_${name} "${name}.cpp")
  target_link_libraries(NVT2D_${name} ${Boost_LIBRARIES})
endmacro(compile)

compile(makeDOS)
compile(refineDOS)
compile(makeDOSJK)
compile(refineDOSJK)
compile(makeHists)
compile(makeOverlap)
compile(makeMicroMeans)
compile(reweight_constK)
compile(reweightdT_constK)
compile(reweightdT2_constK)
compile(reweight_constT)
compile(reweightdT_constT)
compile(reweight_contour)
compile(reweightdT_contour)
compile(reweightdT2_contour)

compile(reweight_prob)
