include_directories(.)

macro(compile name)
  add_executable(NVT2D_${name} "${name}.cpp")
  target_link_libraries(NVT2D_${name} ${Boost_LIBRARIES})
endmacro(compile)

compile(makeDOS)
compile(makeDOS_new)
compile(makeDOS_broydn2)
compile(refineDOS)
compile(refineDOS_broydn2)
compile(makeDOSJK)
compile(makeDOSJK_broydn2)
compile(refineDOSJK)
compile(refineDOSJK_broydn2)
compile(makeHists)
compile(makeOverlap)
compile(makeMicroMeans)
compile(reweight_constK)
compile(reweightdT_constK)
compile(reweightdT2_constK)
compile(reweight_constT)
compile(reweightdT_constT)
compile(reweight_contour)
compile(reweightdT_contour)
compile(reweightdT2_contour)

compile(reweight_hist2d)
compile(reweight_hist)
compile(reweight_prob)

compile(logWeightOfE)
compile(InverseBetaMicro)

compile(searchMinMax)
compile(canonical)
compile(canonical_dT)
